--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,8 @@
+logging:
+  level: INFO
+  loggers:
+    com.github.deberth.todo: DEBUG
+
 server:
   applicationContextPath: /
   applicationConnectors:
@@ -6,3 +11,15 @@ server:
   adminConnectors:
     - type: http
       port: 8081
+
+database:
+  driverClass: org.postgresql.Driver
+  user: postgres
+  password: secret
+  url: jdbc:postgresql://0.0.0.0:5432/postgres
+  properties:
+    charSet: UTF-8
+    hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate.hbm2ddl.auto: update
+  maxWaitForConnection: 5s
+  validationQuery: "SELECT 1"
