--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,15 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            <plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+            <!--            <plugin>-->
 <!--                <artifactId>maven-javadoc-plugin</artifactId>-->
 <!--                <version>3.0.0-M1</version>-->
 <!--                <executions>-->
