--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <version>${dropwizard.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-healthchecks</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>3.1.0</version>
@@ -97,7 +102,11 @@
             <version>1.12.3</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.dropwizard.modules</groupId>
+            <artifactId>dropwizard-flyway</artifactId>
+            <version>1.3.0-4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -115,7 +124,7 @@
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>${mainClass}</mainClass>
+                        <mainClass>${mainClass}</mainClass>
                         </transformer>
                     </transformers>
                     <!-- exclude signed Manifests -->
@@ -179,18 +188,17 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-            <!--            <plugin>-->
-<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--                <version>3.0.0-M1</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>attach-javadocs</id>-->
-<!--                        <goals>-->
-<!--                            <goal>jar</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>6.1.0</version>
+                <configuration>
+                    <url>jdbc:postgresql://0.0.0.0:5432/postgres</url>
+                    <user>postgres</user>
+                    <password>secret</password>
+                </configuration>
+
+            </plugin>
                 </plugins>
     </build>
 
