--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,6 +20,6 @@ database:
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate.hbm2ddl.auto: update
+    #hibernate.hbm2ddl.auto: update
   maxWaitForConnection: 5s
   validationQuery: "SELECT 1"
