+ Added logging to core package + Modified logging config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,8 @@ logging:
         type: json
   loggers:
     com.github.deberth.todo: DEBUG
+    "org.hibernate": WARN
+    "io.dropwizard": WARN
 
 server:
   requestLog:
