+ Added default value for description fields + Added swagger + Added basic auth

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,3 +34,6 @@ database:
     #hibernate.hbm2ddl.auto: update
   maxWaitForConnection: 5s
   validationQuery: "SELECT 1"
+
+swagger:
+  resourcePackage: "com.github.deberth.todo.resources"
